# AIGenProject

./: .gitignore  README.md  environment_instructions.txt  pyproject.toml
GenAI/: 1.llm_call.py  2.llm_personalized_chatbot.py  3.llm_with_ui.py  4.few_shot_prompting.py  5.ChainOfThoughts.py  6.TicketCategorizationreasoning.py  llm_personalized_invsugg.py
GenAI/Incident_summarization_lab/: inc_data_final.csv  step1_output.csv
Python classes/: 0.1python_core.ipynb  0.2python_numpy.ipynb  0.3python_pandas.ipynb  python_lab1.ipynb  python_lab2.ipynb
