[project]
name = "aibees5vamshi"
version = "0.1.0"
description = "VAMSHI"
authors = [
    {name = "VAMSHI"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
