[project]
name = "aibees"
version = "0.1.0"
description = "GenAI"
authors = [
    {name = "vamshi"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "langchain (==0.3.27)",
    "python-dotenv (==1.1.1)",
    "langchain-google-genai (==2.1.12)",
    "streamlit (>=1.54.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
